--- a/code/cfg/DAMSM/bird.yml
+++ b/code/cfg/DAMSM/bird.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'DAMSM'
 
 DATASET_NAME: 'birds'
-DATA_DIR: '../data/birds'
+DATA_DIR: '/content/DM-GAN/data/birds'
 GPU_ID: 0
 WORKERS: 1
 
